session crud finished
